# F1_Analysis

./: .gitignore  F1.ipynb  README.md  constants.py  data.csv  get_data.py  get_scores.py  pyproject.toml  train_ai.py
