[project]
name = "f1-analysis"
version = "2.0.0"
description = "Predict F1 race points from practice session telemetry using XGBoost"
requires-python = ">=3.10"
dependencies = [
    "fastf1>=3.5",
    "pandas>=2.0",
    "numpy>=1.24",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.scripts]
f1-scores = "get_scores:main"
f1-train = "train_ai:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
